[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
miette = { version = "5.10", features = ["fancy"] }
nom = { version = "7.1", features = ["alloc"] }
nom-supreme = "0.8"
nom_locate = "4.1"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
