[package]
name = "day9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"

itertools = "0.11"
nom = { version = "7.1", features = ["alloc"] }
smallvec = "1.11"
dhat = "0.3"

[profile.release]
debug = 1

[features]
dhat-heap = []
